--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,16 +15,18 @@
 
     <TextView
         android:id="@+id/result_view"
-        android:layout_width="100dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="396dp"
+        android:layout_height="69dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorTextView"
+        android:text="TYPE: "
         android:textColor="@color/colorText"
-        android:textSize="10sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.908" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
